@@ -1,0 +1,6 @@
+[Desktop Entry]
+_Name=Hardware
+_Comment=Settings for several hardware devices
+Icon=preferences-desktop-peripherals
+Type=Directory
+Encoding=UTF-8
