@@ -1,3 +1,7 @@
+2007-01-08  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* desktop-directories/Hardware.directory.in: added missing file.
+
 2007-01-08  Denis Washington <dwashington@gmx.net>
 
 	Fixes #393617
